syntax = "proto3";
package ujds.record.v1;
option go_package = "github.com/ashep/ujds/sdk/proto/ujds/record/v1";

message Record {
  string id = 1;
  uint64 rev = 2;
  string index = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  string data = 6;
}

message PushRequest {
  message Record {
    string id = 1;
    string data = 2;
  }

  string index = 1;
  repeated Record records = 2;
}

message PushResponse {}

message GetRequest {
  string index = 1;
  string id = 2;
}

message GetResponse {
  Record record = 1;
}

message GetAllRequest {
  string index = 1;
  int64 since = 2;
  uint32 limit = 3;
  uint64 cursor = 4;
}

message GetAllResponse {
  uint64 cursor = 1;
  repeated Record records = 2;
}

message HistoryRequest {
  string index = 1;
  string id = 2;
  int64 since = 3;
  uint32 limit = 4;
  uint64 cursor = 5;
}

message HistoryResponse {
  uint64 cursor = 1;
  repeated Record records = 2;
}

service RecordService {
  rpc Push(PushRequest) returns (PushResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc GetAll(GetAllRequest) returns (GetAllResponse) {}
  rpc History(HistoryRequest) returns (HistoryResponse) {}
}