syntax = "proto3";
package ujds.v1;
option go_package = "github.com/ashep/ujds/sdk/proto/ujds/v1";

message Record {
  string id = 1;
  uint64 rev = 2;
  string index = 3;
  int64 created_at = 4;
  int64 updated_at = 5;
  string data = 6;
}

message PushRecordsRequest {
  message NewRecord {
    string id = 1;
    string data = 2;
  }

  string index = 1;
  repeated NewRecord records = 2;
}

message PushRecordsResponse {}

message GetRecordRequest {
  string index = 1;
  string id = 2;
}

message GetRecordResponse {
  Record record = 1;
}

message GetRecordsRequest {
  string index = 1;
  int64 since = 2;
  uint32 limit = 3;
  uint64 cursor = 4;
}

message GetRecordsResponse {
  uint64 cursor = 1;
  repeated Record records = 2;
}

message ClearRecordsRequest {
  string index = 1;
}

message ClearRecordsResponse {
}

service RecordService {
  rpc PushRecords(PushRecordsRequest) returns (PushRecordsResponse) {}
  rpc GetRecord(GetRecordRequest) returns (GetRecordResponse) {}
  rpc GetRecords(GetRecordsRequest) returns (GetRecordsResponse) {}
  rpc ClearRecords(ClearRecordsRequest) returns (ClearRecordsResponse) {}
}